fixed overflow

--- a/portlets/contenteditor-portlet/src/main/webapp/css/main.css
+++ b/portlets/contenteditor-portlet/src/main/webapp/css/main.css
@@ -325,4 +325,5 @@ span.ontology-term-label {
 .colFloatLef{float:left}
 #tree-view{width:350px}
 #saveArticle{cursor:pointer}
+#articleURL{overflow:hidden}
 #anchorArticleURL{display: block; width:0px;}
